--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +16,37 @@
         android:theme="@style/Theme.YP01Mobile"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".OneItemScreen"
+            android:exported="false" />
+        <activity
+            android:name=".boottomNav.MenuFragment.SauceFragment"
+            android:exported="false" />
+        <activity
+            android:name=".boottomNav.MenuFragment.SnacksFragment"
+            android:exported="false" />
+        <activity
+            android:name=".boottomNav.MenuFragment.DrinksFragment"
+            android:exported="false" />
+        <activity
+            android:name=".boottomNav.MenuFragment.FoodsFragment"
+            android:exported="false" />
+        <activity
+            android:name=".boottomNav.HomeFragment"
+            android:exported="false" />
+        <activity
+            android:name=".MainScreen"
+            android:exported="false" />
+        <activity
+            android:name=".LaunchScreen"
+            android:exported="false" />
+        <activity
+            android:name=".sign_up_screen"
+            android:exported="false" />
+        <activity
+            android:name=".sign_in_screen"
+            android:exported="false" />
+        <activity
+            android:name=".on_boarding_screen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
